# rapid

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  Brewfile  LICENSE  Makefile  README.md  SECURITY.md  changelog_release_template.md  claude-progress.md  feature_list.json  get_latest_release_changelog.py  mkdocs.yml  package-lock.json  release.py  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  postStartCommand.sh  requirements.txt
.github/: .github.env
api/: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  batect.yml  changelog.md  changelog_release_template.md  get_latest_release_changelog.py  image-utils.sh  local-venv-setup.sh  requirements-dev.txt  requirements.txt  vulnerability-ignore-list.txt
backend/: .dockerignore  .flake8  Dockerfile  image-utils.sh  requirements-dev.txt  requirements.txt  setup.py  vulnerability-ignore-list.txt
docs/: changelog.md  contributing.md  getting_started.md  index.md  migration.md
frontend/: .env.development.example  .eslintrc.json  custom.d.ts  eslint.config.mjs  jest.config.js  jest.setup.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
infrastructure/: .gitignore  (+11 more)
mcp-server/: .gitignore  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
mcp-server/rapid_mcp_server/: api_client.py  config.py  server.py
mcp-server/rapid_mcp_server/tools/: dataset_tools.py  job_tools.py  schema_tools.py  user_tools.py
mcp-server/tests/: test_config.py
(+711 files in other folders)
